ios overflow-x hidden fix

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,6 +8,10 @@
 .hs-form{
     background-color: red !important;
 }
+
+html{
+    overflow-x: hidden;
+}
  
 body {
     overflow-x: hidden;
